# Kafka_Messenger

./: Controller.py  Dockerfile  README.md  app.py  app_service.py  dbMongo.py  docker-compose.yml  kafkaSetup.py  kafka_service.py  main.py  mongodb_service.py  pyproject.toml  requirements.txt
mongo-init-scripts/: init-mongo.js
python-flask-restapi/: app.py  app_service.py  docker-compose.yml
