[tool.poetry]
name = "python-flask-restapi"
version = "0.1.0"
description = ""
authors = ["samuel valverde <savalverde@estudiantec.cr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
python-dotenv = "^1.0.1"
pymongo = "^4.0.1"
kafka-python = "^2.0.2" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
